--- a/assets/MapLoom-1.2.0.css
+++ b/assets/MapLoom-1.2.0.css
@@ -7884,7 +7884,44 @@ button.authors-shown {
   border-radius: 4px 4px 0 0;
 }
 
-.orangehover {
+.explorer-content {
+  min-height: 270px;
+}
+
+.filter .alert-title h3 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.filter .abstract {
+  height: 200px;
+  overflow-y: auto;
+}
+
+.explorer #mappreview {
+  margin-top: 20px;
+}
+
+.explorer #mappreview .alert-warning-mp {
+  margin-bottom: 0;
+}
+
+.explorer .result-panel .result-table {
+  padding-right: 15px;
+}
+
+.explorer .result-panel .result-table .search-results {
+  height: 75vh;
+  overflow-y: auto;
+}
+
+.explorer .result-panel .actions {
+  margin: 20px 0 0px 0px;
+  text-align: right;
+}
+
+.preview-hover {
   background-color: orange;
 }
 
