publish gh-pages (auto)
branch:       hypermap
SHA:          e0d7b91b0db4e51848a56fb3564727cc5d1be677
range SHA:    813223804c4f...e0d7b91b0db4
build id:     129260409
build number: 96

--- a/assets/MapLoom-1.2.0.css
+++ b/assets/MapLoom-1.2.0.css
@@ -7815,6 +7815,7 @@ button.authors-shown {
 
 [loom-addlayers] .modal-body {
   min-height: 200px;
+  padding-top: 5px;
   overflow: hidden;
   overflow-y: auto;
   background-color: #dbdbdb;
