publish gh-pages (auto)
branch:       hypermap
SHA:          e373c0d7f5fcbd1d1e047059157033ae9352f3e7
range SHA:    33ff292ead0b...e373c0d7f5fc
build id:     129891968
build number: 133

--- a/assets/MapLoom-1.2.0.css
+++ b/assets/MapLoom-1.2.0.css
@@ -8112,6 +8112,19 @@ rzslider .rz-pointer.rz-active:after {
   background-color: rgba(255, 255, 255, 0);
 }
 
+.remove-button span {
+  padding: 4px;
+  visibility: hidden;
+}
+
+.remove-button span:hover {
+  color: #ff714c;
+}
+
+.remove-button:hover span {
+  visibility: visible;
+}
+
 .loom-arrangeable body.dragging,
 .loom-arrangeable body.dragging * {
   cursor: move !important;
