--- a/assets/MapLoom-1.2.0.css
+++ b/assets/MapLoom-1.2.0.css
@@ -7967,6 +7967,10 @@ button.authors-shown {
   text-align: right;
 }
 
+.table.list-results {
+  table-layout: fixed;
+}
+
 .explorer .result-table .actions {
   margin: 20px 0 0px 0px;
   text-align: left;
