publish gh-pages (auto)
branch:       hypermap
SHA:          195e70f722062162e2d4db20a6dd0142e927c691
range SHA:    7ec6c779c7af...195e70f72206
build id:     136595874
build number: 209

--- a/assets/MapLoom-1.2.0.css
+++ b/assets/MapLoom-1.2.0.css
@@ -8118,7 +8118,7 @@ button.authors-shown {
 }
 
 .range-search rzslider {
-  margin-top: 20px;
+  margin-top: 6px;
 }
 
 rzslider .rz-pointer {
@@ -8162,6 +8162,10 @@ rzslider .rz-pointer.rz-active:after {
 
 .remove-button:hover span {
   visibility: visible;
+}
+
+.bar-graph svg {
+  margin-top: 10px;
 }
 
 .loom-arrangeable body.dragging,
