publish gh-pages (auto)
branch:       hypermap
SHA:          ea33f27d9b4cc9e4d99f4e39e49ae885479a5553
range SHA:    3cc30c10c2d6...ea33f27d9b4c
build id:     137638681
build number: 225

--- a/assets/MapLoom-1.2.0.css
+++ b/assets/MapLoom-1.2.0.css
@@ -8165,7 +8165,8 @@ rzslider .rz-pointer.rz-active:after {
 }
 
 .bar-graph svg {
-  margin-top: 10px;
+  margin-top: 9px;
+  margin-bottom: -9px;
 }
 
 .loom-arrangeable body.dragging,
