Add registry layer to exchange composer map

--- a/src/common/addlayers/partials/addlayersfilter.tpl.html
+++ b/src/common/addlayers/partials/addlayersfilter.tpl.html
@@ -1,4 +1,4 @@
-<nav class="filter panel panel-default">
+<nav class="filter panel panel-default add-layer">
     <div class="panel-body">
       <form class="col-md-12" ng-submit="search()">
         <div class="row">
