--- a/src/app/app.less
+++ b/src/app/app.less
@@ -89,19 +89,19 @@ html, body {
   border-color: #b94a48 !important;
 }
 
-#add-layer-dialog .modal-dialog{
+#registry-layer-dialog .modal-dialog{
   width: 95%;
 }
 
 @media (min-width: 960px){
-  #add-layer-dialog .modal-dialog {
+  #registry-layer-dialog .modal-dialog {
     width: 90%;
     height: 768px;
 	}
 }
 
 @media (max-width: 600px) and (min-width: 959px){
-  #add-layer-dialog .modal-dialog {
+  #registry-layer-dialog .modal-dialog {
     width: 98% !important;
   }
 }
@@ -150,8 +150,12 @@ html, body {
 	font-weight: normal;
 	/*overflow: visible;*/
 	background-color: rgba(151, 179, 205, 0);
-	padding-top: 15px;
+
+	box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
 	-webkit-box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+}
+.panel.add-layer{
+	padding-top: 15px;
 }
 
 .panel-group .panel-heading + .panel-collapse .panel-body{
