Cleaning and separating functions belonging to addLayers and registryLayers

--- a/src/common/addlayers/style/addlayers.less
+++ b/src/common/addlayers/style/addlayers.less
@@ -5,7 +5,7 @@
   }
 }
 
-[loom-addlayers] .modal-body {
+[loom-registrylayers] .modal-body {
   overflow: hidden;
   overflow-y: auto;
   min-height: 200px;
