--- a/src/common/addlayers/partials/registryLayers.tpl.html
+++ b/src/common/addlayers/partials/registryLayers.tpl.html
@@ -15,7 +15,7 @@
                         <th>Domain</th>
                       </tr>
                       <tr class="result" ng-mouseover="previewLayer(layer);" ng-click="selectRow(layer)" ng-class="{'preview-hover': isInCart(layer)}"
-                        ng-repeat="layer in layersConfig = getResults() | filter:filterLayers | filter:filterAddedLayers">
+                        ng-repeat="layer in layersConfig = getResults() | filter:filterAddedLayers">
                         <td class="ellipsis">{{ layer.Title }}</td>
                         <td>{{ layer.domain }}</td>
                       </tr>
