LayerService creation for DRY code between addLayers y registryLayers

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -89,6 +89,10 @@ html, body {
   border-color: #b94a48 !important;
 }
 
+#add-layer-dialog .modal-dialog{
+  width: 414px;
+}
+
 #registry-layer-dialog .modal-dialog{
   width: 95%;
 }
