49 integrate registry layer in main mapLoom (#57)
* Add registry layer to exchange composer map

* Include the original add layer

* Cleaning and separating functions belonging to addLayers and registryLayers

* LayerService creation for DRY code between addLayers y registryLayers

* Fixing Integration tests

--- a/src/common/addlayers/style/addlayers.less
+++ b/src/common/addlayers/style/addlayers.less
@@ -5,10 +5,13 @@
   }
 }
 
-[loom-addlayers] .modal-body {
+[loom-addlayers] .modal-body, [loom-registrylayers] .modal-body {
   overflow: hidden;
   overflow-y: auto;
   min-height: 200px;
+}
+
+[loom-registrylayers] .modal-body {
   padding-top: 0px;
   background-color: #dbdbdb;
 }
