--- a/assets/MapLoom-1.5.0.css
+++ b/assets/MapLoom-1.5.0.css
@@ -7814,11 +7814,15 @@ button.authors-shown {
   background-color: #4977a3;
 }
 
-[loom-addlayers] .modal-body {
+[loom-addlayers] .modal-body,
+[loom-registrylayers] .modal-body {
   min-height: 200px;
-  padding-top: 0px;
   overflow: hidden;
   overflow-y: auto;
+}
+
+[loom-registrylayers] .modal-body {
+  padding-top: 0px;
   background-color: #dbdbdb;
 }
 
@@ -9563,18 +9567,22 @@ body.modal-open,
 }
 
 #add-layer-dialog .modal-dialog {
+  width: 414px;
+}
+
+#registry-layer-dialog .modal-dialog {
   width: 95%;
 }
 
 @media (min-width: 960px) {
-  #add-layer-dialog .modal-dialog {
+  #registry-layer-dialog .modal-dialog {
     width: 90%;
     height: 768px;
   }
 }
 
 @media (max-width: 600px) and (min-width: 959px) {
-  #add-layer-dialog .modal-dialog {
+  #registry-layer-dialog .modal-dialog {
     width: 98% !important;
   }
 }
@@ -9621,12 +9629,16 @@ body.modal-open,
 }
 
 .panel {
-  padding-top: 15px;
   margin: 0;
   font-weight: normal;
   background-color: rgba(151, 179, 205, 0);
   border: 0;
   -webkit-box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+          box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+}
+
+.panel.add-layer {
+  padding-top: 15px;
 }
 
 .panel-group .panel-heading + .panel-collapse .panel-body {
