Increase the map preview size to half the height of the modal

--- a/src/common/addlayers/partials/registryLayers.tpl.html
+++ b/src/common/addlayers/partials/registryLayers.tpl.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
             </div>
-            <div class="tab-content col-md-7 explorer-content">
+            <div class="tab-content col-md-6 explorer-content">
                 <div class="tab-pane active" id="explore">
                   <div loom-addlayersfilter></div>
                 </div>
@@ -33,7 +33,7 @@
                 <div class="search-pagination">
                 </div>
             </div>
-            <div class="col-md-5 clearfix result-panel">
+            <div class="col-md-6 clearfix result-panel">
                 <div class="panel panel-default add-layer" id="mapreview" name="loom-map-panel">
                   <div class="alert alert-title alert-layer-mp">
                       Limit the search to data that includes features in the displayed area.
@@ -43,39 +43,40 @@
                   </div>
                 </div>
 
-                <div class="filter panel panel-default add-layer" name="layer-information-panel">
-                  <div class="alert alert-title alert-warning-mp">
-                    <h3>{{currentLayer.Title}}</h3>
-                  </div>
-                    <div class="panel-body">
-                      <div class="row">
-                        <div class="col-md-8 col-sm-8">
-                          <p class="abstract">{{currentLayer.Abstract}}</p>
-                        </div>
-
-                        <div class="col-md-4 col-sm-4 row">
-                          <div class="layer-info-left">
-                            <div>{{currentLayer.LayerDate || 'Date' | date : 'd/MM/y'}}</div>
-                            <div>{{currentLayer.LayerCategory || 'Category'}}</div>
+                <div class="row">
+                  <div class="col-md-6 filter panel panel-default add-layer panel-abstract" name="layer-information-panel">
+                    <div class="alert alert-title alert-warning-mp">
+                      <h3>{{currentLayer.Title}}</h3>
+                    </div>
+                      <div class="panel-body">
+                        <div class="row">
+                          <div class="col-md-12">
+                            <div class="layer-info-left">
+                              <div class="col-md-12">{{currentLayer.LayerDate || 'Date' | date : 'd/MM/y'}}</div>
+                              <div class="col-md-12">{{currentLayer.LayerCategory || 'Category'}}</div>
+                            </div>
+                          </div>
+                          <div class="col-md-12">
+                            <p class="abstract">{{currentLayer.Abstract}}</p>
                           </div>
                         </div>
                       </div>
-                    </div>
-                </div>
-
-                <div class="panel panel-cart add-layer">
-                  <div class="panel-heading">
-                    <h3 class="panel-title">Cart</h3>
                   </div>
-                  <div class="panel-body">
-                    <table class="table table-hover list-results">
-                      <tr class="result" ng-repeat="layer in cart.slice().reverse()">
-                        <td class="remove-button">
-                          {{layer.Title}}
-                          <span ng-click="addToCart(layer)" class="glyphicon glyphicon-remove pull-right"></span>
-                        </td>
-                      </tr>
-                    </table>
+
+                  <div class="col-md-6 panel panel-cart add-layer">
+                    <div class="panel-heading">
+                      <h3 class="panel-title">Cart</h3>
+                    </div>
+                    <div class="panel-body">
+                      <table class="table table-hover list-results">
+                        <tr class="result" ng-repeat="layer in cart.slice().reverse()">
+                          <td class="remove-button">
+                            <div class="col-md-10 ellipsis">{{layer.Title}}</div>
+                            <span ng-click="addToCart(layer)" class="glyphicon glyphicon-remove pull-right"></span>
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
                   </div>
                 </div>
 
