--- a/src/common/addlayers/style/addlayers.less
+++ b/src/common/addlayers/style/addlayers.less
@@ -93,7 +93,7 @@
 }
 
 .filter.panel .panel-body{
-  padding: 15px !important;
+  padding: 10px !important;
 }
 
 .filter .alert-title h3,  .ellipsis{
@@ -101,8 +101,17 @@
   white-space: nowrap;
   overflow: hidden;
 }
+
+.panel-abstract {
+
+  padding-right: 8px;
+
+  .panel-body {
+    height: 200px;
+  }
+}
 .filter .abstract {
-  height: 110px;
+  height: 100px;
   overflow-y: auto;
   font-weight:300;
 }
@@ -269,11 +278,14 @@
 
 .loom-map{
   div{
-    max-height: 160px;
+    height: 324px;
   }
 }
 
 .panel-cart {
+
+  padding-left: 7px;
+
   .panel-heading {
     color: #ffffff;
     background-color: #ff714c;
@@ -291,7 +303,7 @@
   }
   .panel-body{
     padding: 0;
-    height: 150px;
+    height: 200px;
     overflow-y: auto;
   }
 }
@@ -328,6 +340,7 @@ rzslider .rz-pointer.rz-active:after {
 }
 
 .remove-button{
+  padding: 7px 7px 7px 0px !important;
   span {
     visibility: hidden;
     padding: 4px;
