publish gh-pages (auto)
branch:       hypermap
SHA:          f0d13a0820504e2c0ec446937c61f879a29dca0f
range SHA:    9569a1c8dbb3...f0d13a082050
build id:     141787834
build number: 272

--- a/assets/MapLoom-1.5.0.css
+++ b/assets/MapLoom-1.5.0.css
@@ -7902,7 +7902,7 @@ button.authors-shown {
 }
 
 .filter.panel .panel-body {
-  padding: 15px !important;
+  padding: 10px !important;
 }
 
 .filter .alert-title h3,
@@ -7912,8 +7912,16 @@ button.authors-shown {
   white-space: nowrap;
 }
 
+.panel-abstract {
+  padding-right: 8px;
+}
+
+.panel-abstract .panel-body {
+  height: 200px;
+}
+
 .filter .abstract {
-  height: 110px;
+  height: 100px;
   overflow-y: auto;
   font-weight: 300;
 }
@@ -8094,7 +8102,11 @@ button.authors-shown {
 }
 
 .loom-map div {
-  max-height: 160px;
+  height: 324px;
+}
+
+.panel-cart {
+  padding-left: 7px;
 }
 
 .panel-cart .panel-heading {
@@ -8116,7 +8128,7 @@ button.authors-shown {
 }
 
 .panel-cart .panel-body {
-  height: 150px;
+  height: 200px;
   padding: 0;
   overflow-y: auto;
 }
@@ -8153,6 +8165,10 @@ rzslider .rz-pointer:hover:after {
 
 rzslider .rz-pointer.rz-active:after {
   background-color: rgba(255, 255, 255, 0);
+}
+
+.remove-button {
+  padding: 7px 7px 7px 0px !important;
 }
 
 .remove-button span {
