--- a/src/common/addlayers/partials/addlayersfilter.tpl.html
+++ b/src/common/addlayers/partials/addlayersfilter.tpl.html
@@ -4,7 +4,7 @@
         <div class="row">
           <div class="search-bar col-md-6 col-xs-6">
             <input name="text_search_input_exp" id="text_search_input_exp" placeholder="Search for ..."
-              ng-model="filterOptions.text" type="text" class="form-control search-input">
+              ng-model="filterOptions.text" ng-change="resetDocsPage()" type="text" class="form-control search-input">
           </div>
           <div class="form-group col-md-6 col-xs-6">
             <select class="form-control search-input select-search" ng-model="catalogKey" ng-change="searchHyper()">
