--- a/src/common/addlayers/partials/addlayersfilter.tpl.html
+++ b/src/common/addlayers/partials/addlayersfilter.tpl.html
@@ -7,8 +7,9 @@
               ng-model="filterOptions.text" ng-change="resetDocsPage()" type="text" class="form-control search-input">
           </div>
           <div class="form-group col-md-6 col-xs-6">
-            <select class="form-control search-input select-search" ng-model="catalogKey" ng-change="searchHyper()">
-              <option ng-repeat="(catalogKey, catalog) in serverService.getCatalogList()" value="{{catalogKey}}">{{catalog.name}}</option>
+            <select class="form-control search-input select-search" ng-model="catalogUrl" ng-change="searchHyper()">
+              <option value="">Select a catalog</option>
+              <option ng-repeat="(catalogKey, catalog) in catalogList" ng-value="catalog.search_url">{{catalog.name}}</option>
             <select>
           </div>
         </div>
