--- a/src/common/addlayers/style/addlayers.less
+++ b/src/common/addlayers/style/addlayers.less
@@ -93,7 +93,7 @@
 }
 
 .filter.panel .panel-body{
-  padding: 10px !important;
+  padding: 10px;
 }
 
 .filter .alert-title h3,  .ellipsis{
@@ -111,16 +111,26 @@
   }
 }
 .filter .abstract {
-  height: 100px;
+  height: 76px;
   overflow-y: auto;
   font-weight:300;
+  font-size: 12px;
+}
+
+.status-block {
+  background: #ececec;
+  font-size: 0.9em;
+  padding-bottom:4px;
+  margin-bottom:6px;
+  font-weight: 300;
+  padding-left: 4px;
 }
 
 .layer-info-left {
   margin-top: 0px;
   div {
     background: rgba(255, 173, 47, 0.25);
-    padding: 8px;
+    padding: 4px;
     margin-bottom: 4px;
     font-weight: 300;
   }
@@ -129,8 +139,8 @@
 .layer-info-right {
   margin-top: 0px;
   div {
-    padding: 8px;
-    margin-bottom: 4px;
+    padding: 6px;
+    margin-bottom: 2px;
     font-weight:300;
   }
 }
