--- a/src/common/addlayers/style/addlayers.less
+++ b/src/common/addlayers/style/addlayers.less
@@ -108,6 +108,7 @@
 
   .panel-body {
     height: 200px;
+    padding: 4px !important;
   }
 }
 .filter .abstract {
@@ -134,6 +135,13 @@
     margin-bottom: 4px;
     font-weight: 300;
   }
+}
+
+.text-green {
+  color: #55a532 !important;
+}
+.text-red {
+    color: #bd2c00 !important;
 }
 
 .layer-info-right {
