--- a/src/common/addlayers/partials/registryLayers.tpl.html
+++ b/src/common/addlayers/partials/registryLayers.tpl.html
@@ -52,16 +52,26 @@
                         <div class="row">
                           <div class="col-md-12">
                             <div class="col-md-12 status-block">
-                              <div>
-                                Last status:
+                              <div ng-if="currentLayer.lastStatus === true || currentLayer.lastStatus === false">
+                                <strong>Last status:</strong>
                                 <span ng-if="currentLayer.lastStatus === false" class="glyphicon glyphicon-remove text-red"></span>
                                 <span ng-if="currentLayer.lastStatus === true" class="glyphicon glyphicon-ok text-green"></span>
                               </div>
-                              <div>
-                                Reliability: {{currentLayer.reliability}}
+                              <div ng-if='currentLayer.reliability'>
+                                <strong>Reliability</strong>: {{currentLayer.reliability}}
                               </div>
-                              <div>
-                                Recent-reliability: {{currentLayer.recentReliability}}
+                              <div ng-if='currentLayer.recentReliability'>
+                                <strong>Recent-reliability:</strong> {{currentLayer.recentReliability}}
+                              </div>
+
+                              <div ng-if='currentLayer.phone'>
+                                <strong>Contact information/Phone:</strong> {{currentLayer.phone}}
+                              </div>
+                              <div ng-if='currentLayer.classification'>
+                                <strong>Classification record:</strong> {{currentLayer.classification}}
+                              </div>
+                              <div ng-if='currentLayer.license'>
+                                <strong>License/copyright:</strong> {{currentLayer.license}}
                               </div>
                             </div>
                             <div class="layer-info-left">
