--- a/src/app/app.less
+++ b/src/app/app.less
@@ -94,19 +94,20 @@ html, body {
 }
 
 #registry-layer-dialog .modal-dialog{
-  width: 95%;
+  width: 100%;
+  padding: 0px;
 }
 
 @media (min-width: 960px){
   #registry-layer-dialog .modal-dialog {
-    width: 90%;
+    width: 100%;
     height: 768px;
 	}
 }
 
 @media (max-width: 600px) and (min-width: 959px){
   #registry-layer-dialog .modal-dialog {
-    width: 98% !important;
+    width: 100% !important;
   }
 }
 
