Custom registry: properties

--- a/src/common/addlayers/style/addlayers.less
+++ b/src/common/addlayers/style/addlayers.less
@@ -111,8 +111,7 @@
   }
 }
 .filter .abstract {
-  height: 76px;
-  overflow-y: auto;
+  padding: 6px;
   font-weight:300;
   font-size: 12px;
 }
@@ -124,6 +123,16 @@
   margin-bottom:6px;
   font-weight: 300;
   padding-left: 4px;
+}
+
+.registry-block {
+  height: 180px;
+  overflow-y: auto;
+  font-size: 0.9em;
+  font-weight: 300;
+  li {
+    padding: 6px;
+  }
 }
 
 .layer-info-left {
