--- a/src/common/addlayers/partials/registryLayers.tpl.html
+++ b/src/common/addlayers/partials/registryLayers.tpl.html
@@ -82,6 +82,74 @@
                           <div class="col-md-12">
                             <p class="abstract">{{currentLayer.abstract}}</p>
                           </div>
+
+                          <div class="col-md-12">
+                            <ul class="list-group registry-block " ng-if="currentLayer.registry">
+                              <li class="list-group-item" ng-if="currentLayer.registry['ContactInformation/Email']">
+                                <strong>Email: </strong>{{currentLayer.registry['ContactInformation/Email']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['ContactInformation/Phone']">
+                                <strong>Phone: </strong>{{currentLayer.registry['ContactInformation/Phone']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['ContactInformation/Primary/organization']">
+                                <strong>Organization: </strong>{{currentLayer.registry['ContactInformation/Primary/organization']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['ContactInformation/Primary/owner']">
+                                <strong>Owner: </strong>{{currentLayer.registry['ContactInformation/Primary/owner']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['authentication']">
+                                <strong>Authentication: </strong>{{currentLayer.registry['authentication']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['classificationData/classification']">
+                                <strong>classification Data: </strong>{{currentLayer.registry['classificationData/classification']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['classificationRecord/classification']">
+                                <strong>classification Record: </strong>{{currentLayer.registry['classificationRecord/classification']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['crisis']">
+                                <strong>Crisis: </strong>{{currentLayer.registry['crisis']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['description/classification/classification']">
+                                <strong>Description - classification: </strong>{{currentLayer.registry['description/classification/classification']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['description/classification/classifiedBy']">
+                                <strong>Description - classified by: </strong>{{currentLayer.registry['description/classification/classifiedBy']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['intlAgreement/bilateral']">
+                                <strong>intlAgreement - bilateral: </strong>{{currentLayer.registry['intlAgreement/bilateral']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['intlAgreement/multi']">
+                                <strong>intlAgreement - multi: </strong>{{currentLayer.registry['intlAgreement/multi']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['lastmodifiedby']">
+                                <strong>Last modified by: </strong>{{currentLayer.registry['lastmodifiedby']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['license/copyright']">
+                                <strong>License/copyright: </strong>{{currentLayer.registry['license/copyright']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['license/restrictions']">
+                                <strong>License/restrictions: </strong>{{currentLayer.registry['license/restrictions']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['mission']">
+                                <strong>Mission: </strong>{{currentLayer.registry['mission']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['nomination/serviceOwner']">
+                                <strong>Nomination/serviceOwner: </strong>{{currentLayer.registry['nomination/serviceOwner']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['nominator/email']">
+                                <strong>Nominator/email: </strong>{{currentLayer.registry['nominator/email']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['nominator/name']">
+                                <strong>Nominator/name: </strong>{{currentLayer.registry['nominator/name']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['serviceName/classification/classification']">
+                                <strong>ServiceName/classification: </strong>{{currentLayer.registry['serviceName/classification/classification']}}
+                              </li>
+                              <li class="list-group-item" ng-if="currentLayer.registry['serviceName/classification/classifiedBy']">
+                                <strong>ServiceName/classified by: </strong>{{currentLayer.registry['serviceName/classification/classifiedBy']}}
+                              </li>
+                            </ul>
+                          </div>
                         </div>
                       </div>
                   </div>
